--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -5,7 +6,25 @@
 }
 
 body{
-    background-size: cover;
+    background-image: url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
     background-repeat: no-repeat;
     background-position: center;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.surveyBox{
+    background-color: #292948;
+    position: relative;
+    display: block;
+    width: 50%;
 }
