--- a/survey-form/style.css
+++ b/survey-form/style.css
@@ -1,30 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-image: url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
-    background-repeat: no-repeat;
-    background-position: center;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-
+body {
+  background-image: url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
+  background-repeat: no-repeat;
+  color: white;
+  background-position: center;
+  background-size: cover;
+  font-family: "Roboto", sans-serif;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
-.surveyBox{
-    background-color: #292948;
-    position: relative;
-    display: block;
-    width: 50%;
+.top {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 20px;
+}
+
+.top h1 {
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.surveyBox {
+  background-color: #292948;
+  position: relative;
+  display: block;
+  width: 50%;
+  height: auto;
+}
+
+select {
+  display: block;
+}
+
+.formContent {
+  padding: 10px;
+  font-size: 20px;
+  margin-left: 50px;
+}
+
+.inputItem {
+  margin-top: 20px;
+  display: block;
+  height: 40px;
+  width: 80%;
+  border-radius: 5px;
+}
+
+.radioCheckBox {
+  margin: 10px;
 }
