--- a/survey-form/style.css
+++ b/survey-form/style.css
@@ -12,7 +12,7 @@ body {
   background-position: center;
   background-size: cover;
   font-family: "Roboto", sans-serif;
-}
+}   
 
 .container {
   display: flex;
@@ -24,8 +24,18 @@ body {
 
 .top {
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-size: 20px;
+}
+
+#title{
+  font-size: 40px;
+
+}
+#description{
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
 }
 
 .top h1 {
@@ -45,10 +55,26 @@ select {
   display: block;
 }
 
+#email,#number,#name,#select,#dropdown{
+  display: block;
+  width: 100%;
+}
+
+.formSection{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .formContent {
   padding: 10px;
   font-size: 20px;
   margin-left: 50px;
+  margin-right: 50px;
+}
+
+.formContent .topText{
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .inputItem {
@@ -61,4 +87,26 @@ select {
 
 .radioCheckBox {
   margin: 10px;
+ }
+
+textarea{
+  display: block;
+  margin-top: 10px;
+  width: 100%;
+}
+
+label{
+  margin-left: 5px;
+}
+
+.btn{
+  margin-top: 20px;
+text-align: center;
+}
+#submit{
+  width: 100%;
+  background-color: #37AF65;
+  height: 40px;
+  color: white;
+  border: none;
 }
