--- a/Product Landing Page/style.css
+++ b/Product Landing Page/style.css
@@ -1,34 +1,90 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    background-color: rgb(238, 238, 238);
-    font-family: 'Roboto',sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  background-color: rgb(238, 238, 238);
+  font-family: "Roboto", sans-serif;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    position: sticky;
-    top: 0;
+body {
+  overflow-x: hidden;
 }
 
-.logo{
-    margin-top: 20px;
-    margin-left: 100px;
+/* header start */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  position: sticky;
+  top: 0;
+  width: 100vw;
+  height: auto;
+}
+
+.logo {
+  margin-top: 20px;
+  margin-left: 100px;
+  cursor: pointer;
 }
 
 .navbar {
-    margin-top: 30px;
-    margin-right: 120px;
+  margin-top: 30px;
+  margin-right: 120px;
 }
 
-.navbar ul li{
-    display: inline;
-    margin-left: 100px;
-    font-size: 16px;
+.navbar ul li {
+  display: inline;
+  margin-left: 100px;
+  font-size: 16px;
+  cursor: pointer;
 }
+
+/* header end */
+
+/* container start */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+/* container end */
+
+/* subscribe section start */
+
+.subscribeSection {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.subscribeSection input {
+  display: block;
+  width: 300px;
+  height: 30px;
+  border: 0.3px solid #333;
+  margin: 20px 0;
+}
+
+.subscribeSection button{
+    background-color: #f1c40f;
+    width: 150px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 2px;
+}
+
+.subscribeSection button span{
+   font-size: 18px;
+    text-transform: uppercase;
+    background-color: #f1c40f;
+    font-weight: 900;
+    letter-spacing: 1.1px;
+}
+
+/* subscribe section end */
