--- a/Product Landing Page/style.css
+++ b/Product Landing Page/style.css
@@ -77,14 +77,14 @@ header {
     height: 40px;
     cursor: pointer;
     border-radius: 2px;
-}
-
-.subscribeSection button span{
-   font-size: 18px;
+    font-size: 18px;
     text-transform: uppercase;
-    background-color: #f1c40f;
     font-weight: 900;
     letter-spacing: 1.1px;
+}
+
+.subscribeSection button:hover{
+  background-color: rgb(255, 165, 0);
 }
 
 /* subscribe section end */
