--- a/Product Landing Page/style.css
+++ b/Product Landing Page/style.css
@@ -7,6 +7,7 @@
   list-style-type: none;
   background-color: rgb(238, 238, 238);
   font-family: "Roboto", sans-serif;
+  list-style-type: none;
 }
 
 body {
@@ -78,6 +79,7 @@ header {
   text-transform: uppercase;
   font-weight: 900;
   letter-spacing: 1.1px;
+  transition: 0.3s;
 }
 
 .subscribeSection button:hover {
@@ -115,3 +117,80 @@ header {
   padding: 5px;
 }
 /* grid container end */
+
+/* iframe container start */
+.iFrameContainer {
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+}
+.iFrameContainer iframe {
+  width: 600px;
+}
+/* iframe container end */
+
+/* cardsContainer start */
+.cardsContainer {
+  margin-top: 60px;
+  display: flex;
+
+  justify-content: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  height: 300px;
+  width: 300px;
+  margin: 10px 30px;
+}
+
+.card-header {
+  background-color: #ddd;
+  color: black;
+  padding: 15px 0;
+  width: 100%;
+  font-weight: 700;
+}
+
+.card .price {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.card .lists {
+  margin-top: 20px;
+}
+
+.card ol li {
+  font-size: 16px;
+  color: black;
+  opacity: 0.8;
+  margin: 10px 0;
+}
+
+.btn{
+  margin: 20px auto;
+}
+.btn button{
+  background-color: #f1c40f;
+  width: 100px;
+  height: 30px;
+  font-size: 20px;
+  border: none;
+ font-weight: 500;
+ cursor: pointer;
+ transition: 0.3s;
+}
+
+button:hover{
+  background-color: rgb(255, 165, 0);
+}
+
+/* cardsContainer end */
