--- a/Technical Documentation Page/style.css
+++ b/Technical Documentation Page/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -5,23 +7,46 @@
 
 body {
   background-color: rgb(255, 255, 255);
+  font-family: "Open Sans", sans-serif;
 }
 
-.content{
-    margin-left: 350px;
-    margin-right: 30px;
-}
+/* sidebar start */
 
 .sidebar {
   position: fixed;
   width: 300px;
   height: 100vh;
   overflow-y: scroll;
-
 }
 
-.sidebar a{
-    color: black;
-    text-decoration: none;
+.sidebar .headItem {
+  font-size: 30px;
+  text-align: center;
+  margin-top: 10px;
+  border-bottom: 1px solid black;
 }
 
+.sidebar a {
+  color: black;
+  text-decoration: none;
+}
+
+.sidebar .sideItem {
+  margin-top: 10px;
+  padding-left: 20px;
+  width: 100%;
+  height: 50px;
+  border-bottom: 1px solid black;
+}
+.sidebar .sideItem a {
+  font-size: 16px;
+  opacity: 0.7;
+}
+/* sidebar end */
+
+/* content start */
+.content {
+  margin-left: 350px;
+  margin-right: 30px;
+}
+/* content end */
