--- a/Technical Documentation Page/style.css
+++ b/Technical Documentation Page/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -20,13 +20,21 @@ body {
 }
 
 .sidebar .headItem {
-position: sticky;
-top: 0;
+  display: flex;
+  justify-content: center;
   font-size: 30px;
-  text-align: center;
+  position: sticky;
+  top: 0;
+  height: auto;
   margin-top: 10px;
   padding-bottom: 20px;
   border-bottom: 1px solid black;
+}
+
+.sidebar .headItem .hr1 {
+  color: black;
+  position: sticky;
+  top: 0;
 }
 
 .sidebar a {
@@ -38,7 +46,7 @@ top: 0;
   margin-top: 10px;
   padding-left: 20px;
   width: 100%;
-  height: 50px;
+  height: 40px;
   border-bottom: 1px solid black;
 }
 .sidebar .sideItem a {
@@ -51,42 +59,84 @@ top: 0;
 .content {
   margin-left: 350px;
   margin-right: 30px;
-
 }
 
-.content .title{
-margin: 10px 0;
-font-weight: 500;
+.content .title {
+  margin: 10px 0;
+  font-weight: 500;
 }
-.content ul li{
+.content ul li {
   margin-top: 10px;
 }
 
-.content p,.content code,.content ul{
+.content p,
+.content code,
+.content ul {
   opacity: 0.7;
   font-size: 16px;
   margin-left: 10px;
 }
 
-.content p{
+.content p {
   margin: 15px 0;
 }
 
-code{
+code {
   display: block;
-    text-align: left;
-    white-space: pre-line;
-    position: relative;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 2;
-    background-color: #f6f6f6;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
+  text-align: left;
+  white-space: pre-line;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #f6f6f6;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
 }
-
 /* content end */
 
 /* media queries start */
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .sidebar {
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%);
+    height: 200px;
+    margin-top: 75px;
+    width: 95vw;
+  }
+
+  .headItem {
+    position: absolute;
+    left: 50%;
+    top: 0%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 30px;
+    transform: translate(-50%);
+    border-bottom: 2px solid black;
+    width: 100vw;
+    text-align: center;
+  }
+
+  .content {
+    position: absolute;
+    left: -20%;
+    top: 40%;
+    transform: translate(-50%);
+  }
+}
 /* media queries end */
