--- a/Personal Portfolio/style.css
+++ b/Personal Portfolio/style.css
@@ -10,6 +10,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
@@ -25,6 +26,7 @@ header {
   height: 100%;
   max-height: 10vh;
   background-color: #be3144;
+  position: fixed;
 }
 
 nav {
@@ -41,8 +43,9 @@ nav a {
   letter-spacing: 0.6px;
 }
 
-.desc {
-  height: 90vh;
+/* content-1 start */
+.content-1 {
+  height: 100vh;
   background: linear-gradient(
     90deg,
     rgba(27, 27, 27, 1) 0%,
@@ -56,15 +59,82 @@ nav a {
   align-items: center;
 }
 
-.desc h1 {
+.content-1 h1 {
   font-size: 60px;
   color: white;
   font-weight: 800;
-  margin-top: -100px;
 }
 
-.desc p {
+.content-1 p {
   font-style: italic;
   color: #be3144;
   font-size: 35px;
 }
+/* content-1 end */
+
+/* content-2 start */
+.content-2 {
+  height: auto;
+  background-color: #45567d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-2 .title {
+  color: white;
+  border-bottom: 1px solid white;
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.projectBox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.projectBox .project {
+  margin-top: 15px;
+  margin-left: 30px;
+}
+
+.project .project-image {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  margin-bottom: 0;
+}
+
+.projectBox .projectBody {
+  background-color: #303841;
+  width: 400px;
+  height: 60px;
+  color: white;
+  text-align: center;
+  padding-top: 15px;
+  margin-top: -4.5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+.content-2 .showBTN {
+  background-color: #303841;
+  margin-top: 60px;
+  margin-bottom: 80px;
+  color: white;
+  width: 130px;
+  height: 50px;
+  font-size: 20px;
+  border: none;
+  transition: 0.5s ease-out;
+}
+.showBTN:hover {
+  background-color: #be3144;
+}
+/* content-2 end */
