--- a/Personal Portfolio/style.css
+++ b/Personal Portfolio/style.css
@@ -29,6 +29,10 @@ header {
   position: fixed;
 }
 
+header a:hover {
+  color: rgba(251, 248, 248, 0.41);
+}
+
 nav {
   margin-right: 40px;
   margin-top: 20px;
@@ -138,3 +142,77 @@ nav a {
   background-color: #be3144;
 }
 /* content-2 end */
+
+/* content-3 start*/
+.content-3 {
+  background-color: #303841;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+}
+
+.content-3 .text {
+  margin-top: 20%;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+  letter-spacing: 1.1px;
+}
+
+.social {
+  display: flex;
+}
+
+.social .mediaDiv {
+  margin-top: 30px;
+  margin-right: 30px;
+  font-size: 25px;
+  opacity: 0.8;
+  transition: 0.6s ease-in-out;
+}
+
+.social .mediaDiv:hover {
+  transform: translateY(20px);
+}
+
+/* content-3 end*/
+
+/* footer start */
+footer {
+  background-color: #303841;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 20px;
+  border-top: 4px solid #be3144;
+  font-size: 20px;
+  color: white;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+/* footer end */
+
+/* media queries start*/
+
+@media (max-width: 768px) {
+  .text p {
+    margin-top: 20px;
+  }
+  .social {
+    display: flex;
+    flex-direction: column;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  footer .right {
+    margin-top: 20px;
+  }
+}
+/* media queries end*/
