--- a/Personal Portfolio/style.css
+++ b/Personal Portfolio/style.css
@@ -29,22 +29,24 @@ header {
   position: fixed;
 }
 
-header a:hover {
-  color: rgba(251, 248, 248, 0.41);
-}
-
 nav {
-  margin-right: 40px;
-  margin-top: 20px;
+  display: flex;
+  margin-right: 25px;
 }
 
 nav a {
-  margin-left: 40px;
+  padding: 20px 20px;
   text-decoration: none;
   font-size: 25px;
   font-weight: 500;
   color: white;
   letter-spacing: 0.6px;
+  height: 100%;
+  display: block;
+}
+
+nav a:hover {
+  background-color: #45567d;
 }
 
 /* content-1 start */
@@ -100,11 +102,13 @@ nav a {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 40px;
+  transition: 1s ease-in-out;
 }
 
 .projectBox .project {
   margin-top: 15px;
   margin-left: 30px;
+  cursor: pointer;
 }
 
 .project .project-image {
@@ -127,20 +131,34 @@ nav a {
   font-size: 20px;
 }
 
+.code {
+  color: #333333;
+  font-size: 18px;
+  transition: color 0.4s ease-out;
+}
+
+.projectBody:hover .code {
+  color: #ef687a;
+}
+
 .content-2 .showBTN {
   background-color: #303841;
   margin-top: 60px;
   margin-bottom: 80px;
   color: white;
   width: 130px;
+  text-decoration: none;
   height: 50px;
   font-size: 20px;
   border: none;
   transition: 0.5s ease-out;
+  text-align: center;
+  padding-top: 10px;
 }
 .showBTN:hover {
   background-color: #be3144;
 }
+
 /* content-2 end */
 
 /* content-3 start*/
@@ -158,7 +176,7 @@ nav a {
   text-align: center;
   margin-bottom: 20px;
   font-size: 30px;
-  letter-spacing: 1.1px;
+  letter-spacing: 1.2px;
 }
 
 .social {
@@ -166,6 +184,7 @@ nav a {
 }
 
 .social .mediaDiv {
+  cursor: pointer;
   margin-top: 30px;
   margin-right: 30px;
   font-size: 25px;
@@ -174,9 +193,8 @@ nav a {
 }
 
 .social .mediaDiv:hover {
-  transform: translateY(20px);
+  transform: translateY(30px);
 }
-
 /* content-3 end*/
 
 /* footer start */
@@ -197,8 +215,13 @@ footer a {
 /* footer end */
 
 /* media queries start*/
-
 @media (max-width: 768px) {
+  .project {
+    display: flex;
+    flex-direction: column;
+    margin-right: 50px;
+  }
+
   .text p {
     margin-top: 20px;
   }
@@ -206,6 +229,11 @@ footer a {
     display: flex;
     flex-direction: column;
   }
+
+  .social .mediaDiv:hover {
+    transform: translateY(20px);
+  }
+
   footer {
     display: flex;
     flex-direction: column;
