--- a/Personal Portfolio/style.css
+++ b/Personal Portfolio/style.css
@@ -127,7 +127,7 @@ nav a:hover {
   padding-top: 15px;
   margin-top: -4.5px;
   border: none;
-  border-radius: 5px;
+  border-end-end-radius: 5px;
   font-size: 20px;
 }
 
