--- a/Personal Portfolio/style.css
+++ b/Personal Portfolio/style.css
@@ -58,7 +58,6 @@ nav a:hover {
     #333333 40%,
     rgba(32, 32, 32, 1) 100%
   );
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -106,9 +105,12 @@ nav a:hover {
 }
 
 .projectBox .project {
-  margin-top: 15px;
   margin-left: 30px;
   cursor: pointer;
+}
+
+.project .projectHead {
+  margin-top: 30px;
 }
 
 .project .project-image {
